Sutter Health/src/objects/PDV_EAF_Validation_Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>ADDRESS__c</fullName>
        <label>ADDRESS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Change__c</fullName>
        <label>Address Change</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>used to capture address line 1.</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>used to capture address line 2.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Modified__c</fullName>
        <label>Address Modified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attn_To__c</fullName>
        <label>Attn To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>CITY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>EAF Validation Audit Trails</relationshipLabel>
        <relationshipName>EAF_Validation_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EAF_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EAF Facility</label>
        <referenceTo>PDV_EAF_Facility__c</referenceTo>
        <relationshipLabel>EAF Validation Audit Trails</relationshipLabel>
        <relationshipName>EAF_Validation_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAX_NUMBER__c</fullName>
        <label>FAX NUMBER</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Facility_ID__c</fullName>
        <label>Facility ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Verified_date__c</fullName>
        <label>Last Verified date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Names_Changes_Suggested__c</fullName>
        <label>Names Changes Suggested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHONE__c</fullName>
        <label>PHONE</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>STATE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_MDM__c</fullName>
        <label>Sent to MDM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suite__c</fullName>
        <label>Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EAF_Validation_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZIP_CODE__c</fullName>
        <label>ZIP CODE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EAF Validation Audit Trail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EAF Validation Audit Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EAF Validation Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>